# ngh2

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/skills/ngh2-audit/: SKILL.md
.agents/skills/ngh2-audit/agents/: openai.yaml
.agents/skills/ngh2-implementation/: SKILL.md
.agents/skills/ngh2-implementation/agents/: openai.yaml
.agents/skills/ngh2-knowledge/: SKILL.md
.agents/skills/ngh2-knowledge/agents/: openai.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: compare_h2.py  render_results.py
docs/assets/: python-benchmark.json
docs/knowledge/: README.md
docs/knowledge/engineering/: dependency-licenses.md  language-api.md
docs/knowledge/protocol/: libnghttp2.md
docs/knowledge/python-native/: binding-tooling.md  reference-bindings.md
src/ngh2/: __init__.py  _core.pyi  _core.pyx  _nghttp2.pxd  config.py  enums.py  events.pyi  events.pyx  exceptions.py  types.py
tests/: test_boundaries.py  test_connection.py  test_controls.py  test_core.py  test_interop_h2spec.py  test_interop_hyper_h2.py  test_lifecycle.py  test_limits.py
tests/interop/: README.md  h2spec_server.py
